--- a/kubuculum/servers/server_fio/templates/server_fio.statefulset.j2
+++ b/kubuculum/servers/server_fio/templates/server_fio.statefulset.j2
@@ -35,7 +35,7 @@ spec:
 {% endif %}
       containers:
       - name: fioserver
-        image: quay.io/mpillai/fio
+        image: {{ fio_image }}
         volumeMounts:
           - mountPath: {{ datadir }}
             name: server-fio-pvc
