start fio server pods in parallel

--- a/kubuculum/servers/server_fio/templates/server_fio.statefulset.j2
+++ b/kubuculum/servers/server_fio/templates/server_fio.statefulset.j2
@@ -23,6 +23,7 @@ spec:
     matchLabels:
       {{ podlabel.split("=")[0] }}: {{ podlabel.split("=")[1] }}
   serviceName: {{ name }}
+  podManagementPolicy: "Parallel"
   replicas: {{ nservers }}
   template:
     metadata:
