support fio refill_buffers

--- a/kubuculum/benchmarks/fio_random/templates/fio_random.prep.job.j2
+++ b/kubuculum/benchmarks/fio_random/templates/fio_random.prep.job.j2
@@ -59,6 +59,9 @@ spec:
             direct=0
             create_on_open=1
             end_fsync=1
+{% if refill_buffers is defined %}
+            refill_buffers={{ refill_buffers }}
+{% endif %}
             directory={{ datadir }}
             filename_format=f.\$jobnum.\$filenum
             bs={{ sbs_kb }}k
